
	* ipmi-raw/: Cleanup/re-architect for later hostrange support.
	
	* bmc-info/src/bmc-info.h, ipmi-sensors/src/ipmi-sensors.h,
	ipmi-sel/src/ipmi-sel.h: New files.

	* bmc-info/src/Makefile.am, ipmi-sensors/src/Makefile.am,
	ipmi-sel/src/Makefile.am: Update for new files respectively.

	* bmc-info/, ipmi-sensors/, ipmi-raw/ ipmi-sel/: Continue
	cleanup/re-architecture.

2007-01-21  Albert Chu <chu11@llnl.gov>

	* bmc-info/src/bmc-info.c: Rename 'flags' to 'debug_flags'.

	* ipmi-sel/, ipmi-sensors/: Cleanup/re-architect for later
	hostrange support.
	
2007-01-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-udm.c,
	libfreeipmi/include/freeipmi/udm/ipmi-udm.h (ipmi_open_outofband):
	Make char parameters const.

	* bmc-info/src/bmc-info.c (main): Fix corner case.
	
2007-01-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-openipmi-api.c: Fix typo found by Dmitry
	Frolov <frolov at riss-telecom dot ru>.
	
2007-01-12  Albert Chu <chu11@llnl.gov>

	* bmc-info/src/bmc-info.c: Cleanup/re-architect for later
	hostrange support.

        * bmc-config/src/bmc-config.c, bmc-info/src/bmc-info.c,
        ipmi-pef/src/ipmi-pef.c, ipmi-raw/src/ipmi-raw.c,
        ipmi-sel/src/ipmi-sel.c, ipmi-sensors/src/ipmi-sensors.c
        (_disable_coredump): Make function static.
	
2007-01-09  Albert Chu <chu11@llnl.gov>

	* bmc-info/src/bmc-info.c (display_channel_info): Fix protocol
	type output bug.
	
2007-01-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-udm.c (IPMI_SESSION_TIMEOUT): Change
	default to 20 seconds.
	
2006-12-29  Albert Chu <chu11@llnl.gov>

	* ipmi-pef/src/ipmi-pef.c, ipmi-sel/src/ipmi-sel.c,
	ipmi-sensors/src/ipmi-sensors.c: Remove unused exit_status global.
	
2006-12-28  Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower.8.in: Add some extra powerman info.
	
2006-12-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h,
	libfreeipmi/include/freeipmi/ipmi-device-global-cmds.h,