@@ -1,5 +1,5 @@
 /* 
-   $Id: ipmi-raw.h,v 1.1 2007-01-22 23:39:27 chu11 Exp $ 
+   $Id: ipmi-raw.h,v 1.2 2007-01-23 00:53:16 chu11 Exp $ 
    
    ipmi-raw.h - ipmi-raw command line argument parser.
    
@@ -26,7 +26,9 @@
 #include <freeipmi/freeipmi.h>
 #include <limits.h>	/* ARG_MAX */
 
-enum argp_option_keys
+#include "argp-common.h"
+
+enum ipmi_raw_argp_option_keys
   {
     CMD_FILE_KEY = 'f',
   };
