@@ -22,8 +22,11 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA
 #include "freeipmi/ipmi-sensor-units-spec.h"
 #include "freeipmi/ipmi-sdr-record-types.h"
 
+#include "ipmi-sensors.h"
+
 static int 
-sensors_display_very_verbose_full_record (int record_id, 
+sensors_display_very_verbose_full_record (ipmi_sensors_state_data_t *state_data,
+                                          int record_id, 
 					  int record_type, 
 					  sdr_full_record_t *record, 
 					  sensor_reading_t *sensor_reading)
@@ -152,7 +155,8 @@ sensors_display_very_verbose_full_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_compact_record (int record_id, 
+sensors_display_very_verbose_compact_record (ipmi_sensors_state_data_t *state_data,
+                                             int record_id, 
 					     int record_type, 
 					     sdr_compact_record_t *record, 
 					     sensor_reading_t *sensor_reading)
@@ -196,7 +200,8 @@ sensors_display_very_verbose_compact_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_event_only_record (int record_id, 
+sensors_display_very_verbose_event_only_record (ipmi_sensors_state_data_t *state_data,
+                                                int record_id, 
 						int record_type, 
 						sdr_event_only_record_t *record, 
 						sensor_reading_t *sensor_reading)
@@ -238,7 +243,8 @@ sensors_display_very_verbose_event_only_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_entity_asso_record (int record_id, 
+sensors_display_very_verbose_entity_asso_record (ipmi_sensors_state_data_t *state_data,
+                                                 int record_id, 
 						 int record_type, 
 						 sdr_entity_association_record_t *record, 
 						 sensor_reading_t *sensor_reading)
@@ -255,7 +261,8 @@ sensors_display_very_verbose_entity_asso_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_gen_dev_locator_record (int record_id, 
+sensors_display_very_verbose_gen_dev_locator_record (ipmi_sensors_state_data_t *state_data,
+                                                     int record_id, 
 						     int record_type, 
 						     sdr_generic_device_locator_record_t *record, 
 						     sensor_reading_t *sensor_reading)
@@ -286,7 +293,8 @@ sensors_display_very_verbose_gen_dev_locator_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_fru_dev_locator_record (int record_id, 
+sensors_display_very_verbose_fru_dev_locator_record (ipmi_sensors_state_data_t *state_data,
+                                                     int record_id, 
 						     int record_type, 
 						     sdr_logical_fru_device_locator_record_t *record, 
 						     sensor_reading_t *sensor_reading)
@@ -307,7 +315,8 @@ sensors_display_very_verbose_fru_dev_locator_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_mgmt_cntrlr_dev_locator_record (int record_id, 
+sensors_display_very_verbose_mgmt_cntrlr_dev_locator_record (ipmi_sensors_state_data_t *state_data,
+                                                             int record_id, 
 							     int record_type, 
 							     sdr_management_controller_device_locator_record_t *record, 
 							     sensor_reading_t *sensor_reading)
@@ -324,7 +333,8 @@ sensors_display_very_verbose_mgmt_cntrlr_dev_locator_record (int record_id,
 }
 
 static int 
-sensors_display_very_verbose_oem_record (int record_id, 
+sensors_display_very_verbose_oem_record (ipmi_sensors_state_data_t *state_data,
+                                         int record_id, 
 					 int record_type, 
 					 sdr_oem_record_t *record, 
 					 sensor_reading_t *sensor_reading)
@@ -347,47 +357,57 @@ sensors_display_very_verbose_oem_record (int record_id,
 }
 
 int 
-sensors_display_very_verbose (sdr_record_t *sdr_record, sensor_reading_t *sensor_reading)
+sensors_display_very_verbose (ipmi_sensors_state_data_t *state_data,                            
+                              sdr_record_t *sdr_record, 
+                              sensor_reading_t *sensor_reading)
 {
   switch (sdr_record->record_type)
     {
     case IPMI_SDR_FORMAT_FULL_RECORD:
-      return sensors_display_very_verbose_full_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_full_record (state_data,
+                                                       sdr_record->record_id, 
 						       sdr_record->record_type, 
 						       &(sdr_record->record.sdr_full_record), 
 						       sensor_reading);
     case IPMI_SDR_FORMAT_COMPACT_RECORD:
-      return sensors_display_very_verbose_compact_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_compact_record (state_data,
+                                                          sdr_record->record_id, 
 							  sdr_record->record_type, 
 							  &(sdr_record->record.sdr_compact_record), 
 							  sensor_reading);
     case IPMI_SDR_FORMAT_EVENT_ONLY_RECORD:
-      return sensors_display_very_verbose_event_only_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_event_only_record (state_data,
+                                                             sdr_record->record_id, 
 							     sdr_record->record_type, 
 							     &(sdr_record->record.sdr_event_only_record), 
 							     sensor_reading);
     case IPMI_SDR_FORMAT_ENTITY_ASSOCIATION_RECORD:
-      return sensors_display_very_verbose_entity_asso_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_entity_asso_record (state_data,
+                                                              sdr_record->record_id, 
 							      sdr_record->record_type, 
 							      &(sdr_record->record.sdr_entity_association_record), 
 							      sensor_reading);
     case IPMI_SDR_FORMAT_GENERIC_DEVICE_LOCATOR_RECORD:
-      return sensors_display_very_verbose_gen_dev_locator_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_gen_dev_locator_record (state_data,
+                                                                  sdr_record->record_id, 
 								  sdr_record->record_type, 
 								  &(sdr_record->record.sdr_generic_device_locator_record), 
 								  sensor_reading);
     case IPMI_SDR_FORMAT_FRU_DEVICE_LOCATOR_RECORD:
-      return sensors_display_very_verbose_fru_dev_locator_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_fru_dev_locator_record (state_data,
+                                                                  sdr_record->record_id, 
 								  sdr_record->record_type, 
 								  &(sdr_record->record.sdr_logical_fru_device_locator_record), 
 								  sensor_reading);
     case IPMI_SDR_FORMAT_MANAGEMENT_CONTROLLER_DEVICE_LOCATOR_RECORD:
-      return sensors_display_very_verbose_mgmt_cntrlr_dev_locator_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_mgmt_cntrlr_dev_locator_record (state_data,
+                                                                          sdr_record->record_id, 
 									  sdr_record->record_type, 
 									  &(sdr_record->record.sdr_management_controller_device_locator_record), 
 									  sensor_reading);
     case IPMI_SDR_FORMAT_OEM_RECORD:
-      return sensors_display_very_verbose_oem_record (sdr_record->record_id, 
+      return sensors_display_very_verbose_oem_record (state_data,
+                                                      sdr_record->record_id, 
 						      sdr_record->record_type, 
 						      &(sdr_record->record.sdr_oem_record), 
 						      sensor_reading);
